--- a/forgot-password.html
+++ b/forgot-password.html
@@ -6,107 +6,7 @@
     <title>Forgot Password - Muse & Prose</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
-    <style>
-    /* Custom CSS Variables */
-    :root {
-      --primary-color: #4a6fa5;
-      --secondary-color: #166088;
-      --accent-color: #4fc3f7;
-      --light-color: #f8f9fa;
-      --dark-color: #212529;
-      --success-color: #28a745;
-      --warning-color: #ffc107;
-    }
-
-    /* Base Styles */
-    body {
-      font-family: 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
-      line-height: 1.6;
-      color: var(--dark-color);
-      background-color: #f5f5f5;
-    }
-
-    /* Custom Navbar */
-    .navbar-custom {
-      background-color: white;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-
-    .navbar-brand {
-      font-weight: 700;
-      color: var(--primary-color) !important;
-    }
-
-    /* Forms */
-    .auth-form {
-      background-color: white;
-      border-radius: 0.5rem;
-      padding: 2rem;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.05);
-      max-width: 500px;
-      margin: 0 auto;
-    }
-
-    .form-title {
-      color: var(--primary-color);
-      margin-bottom: 1.5rem;
-      text-align: center;
-    }
-
-    /* Buttons */
-    .btn-primary-custom {
-      background-color: var(--primary-color);
-      border-color: var(--primary-color);
-      padding: 0.5rem 1.5rem;
-    }
-
-    .btn-primary-custom:hover {
-      background-color: var(--secondary-color);
-      border-color: var(--secondary-color);
-    }
-
-    /* Footer */
-    .footer {
-      background-color: var(--dark-color);
-      color: white;
-      padding: 3rem 0;
-      margin-top: 3rem;
-    }
-
-    .footer-links {
-      list-style: none;
-      padding: 0;
-    }
-
-    .footer-links li {
-      margin-bottom: 0.5rem;
-    }
-
-    .footer-links a {
-      color: rgba(255,255,255,0.7);
-      text-decoration: none;
-    }
-
-    .footer-links a:hover {
-      color: white;
-      text-decoration: underline;
-    }
-
-    /* Auth Page Specific */
-    .auth-page {
-      min-height: calc(100vh - 120px);
-      display: flex;
-      align-items: center;
-    }
-
-    /* Instructions */
-    .instructions {
-      background-color: #f8f9fa;
-      border-left: 4px solid var(--accent-color);
-      padding: 1rem;
-      margin-bottom: 1.5rem;
-    }
-    </style>
+    <link rel="stylesheet" href="css/auth-style.css">
 </head>
 <body>
     <!-- Navigation -->
