--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="col-md-4">
                     <h5>Contact</h5>
                     <ul class="footer-links">
-                        <li>hello@Muse & Prose.example</li>
+                        <li>hello@muse-prose.com</li>
                         <li>+1 (555) 123-4567</li>
                     </ul>
                 </div>
