--- a/signup.html
+++ b/signup.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="mb-3 form-check">
                         <input type="checkbox" class="form-check-input" id="terms" required>
-                        <label class="form-check-label" for="terms">I agree to the <a href="#" class="text-decoration-none">Terms of Service</a> and <a href="#" class="text-decoration-none">Privacy Policy</a></label>
+                        <label class="form-check-label" for="terms">I agree to the <a href="#" class="text-decoration-none">Terms of Service</a> and <a href="privacy-policy.html" class="text-decoration-none">Privacy Policy</a></label>
                     </div>
                     <button type="submit" class="btn btn-primary-custom w-100">Sign Up</button>
                 </form>
